#5071 fixed flicker focus on modal by removing conflicting tabIndex off off overlay and model content. Refactored some code and added in some better styling

--- a/tdrs-frontend/src/assets/feedback/Feedback.scss
+++ b/tdrs-frontend/src/assets/feedback/Feedback.scss
@@ -6,7 +6,7 @@
 
   &:focus,
   &:focus-visible {
-    outline: none;
+    outline: none !important;
   }
 }
 
